fixes profile pic spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -282,3 +282,9 @@ address {
     color: #000;
   }
 }
+
+@media (max-width: 1141px){
+  #profile-pic {
+    transform: scale(.8);
+  }
+}
